--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -28,7 +28,7 @@ body {
     position: relative;
     display: block;
     width: 30em;
-    height: 40em; /* Ajustado para acomodar mais campos */
+    height: 40em;
     margin: 0 auto;
 }
 
